--- a/content/class-4.tex
+++ b/content/class-4.tex
@@ -13,10 +13,148 @@
 
 % \larger[2]
 
-{\bf 第一题}. 
+{\bf 第一题}. 计算下列行列式。
+
+(1) $D = \begin{vmatrix} 2 & 1 & -1 & 3 \\ 1 & 4 & 1 & 2 \\ -1 & 2 & 1 & 1 \\ 1 & 0 & 2 & 1 \end{vmatrix}$; \hspace{2em} (2) $D_n = \begin{vmatrix} 1 + a_1 & a_2 & a_3 & \cdots & a_n \\ a_1 & 1 + a_2 & a_3 & \cdots & a_n \\ a_1 & a_2 & 1 + a_3 & \cdots & a_n \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ a_1 & a_2 & a_3 & \cdots & 1 + a_n \end{vmatrix}$
 
 \newpageorvspace
 
-{\bf 证明}： 
+{\bf 解}： (1)
+\begin{align*}
+D & = \begin{vmatrix} 2 & 1 & -1 & 3 \\ 1 & 4 & 1 & 2 \\ -1 & 2 & 1 & 1 \\ 1 & 0 & 2 & 1 \end{vmatrix} = \begin{vmatrix} 0 & 1 & -5 & 1 \\ 0 & 4 & -1 & 1 \\ 0 & 2 & 3 & 2 \\ 1 & 0 & 2 & 1 \end{vmatrix} = (-1)^{4+1} \begin{vmatrix} 1 & -5 & 1 \\ 4 & -1 & 1 \\ 2 & 3 & 2 \end{vmatrix} \\
+& = - (-1)^{1+1} \begin{vmatrix} 1 & -5 & 1 \\ 0 & 19 & -3 \\ 0 & 13 & 0 \end{vmatrix} = - \begin{vmatrix} 19 & -3 \\ 13 & 0 \end{vmatrix} = -39
+\end{align*}
+
+(2) 利用行列式的多线性性进行求解。令$e_1 = (1, 0, \ldots, 0)^T, \ldots, e_n = (0, \ldots, 0, 1)^T,$ $\gamma = (1, \ldots, 1)^T = e_1 + \cdots + e_n.$ 那么
+\begin{align*}
+D_n & = \det( e_1 + a_1 \gamma, \ldots, e_n + a_n \gamma) \\
+& = \det( e_1, \ldots, e_n) + \det( a_1 \gamma, e_2, \ldots, e_n) + \cdots + \det( e_1, \ldots, e_{n-1}, a_n \gamma) + 0 + \cdots + 0 \\
+& = 1 + a_1 \det( \gamma, e_2, \ldots, e_n) + \cdots + a_n \det( e_1, \ldots, e_{n-1}, \gamma) \\
+& = 1 + a_1 \det( e_1 + \cdots + e_n, e_2, \ldots, e_n) + \cdots + a_n \det( e_1, \ldots, e_{n-1}, e_1 + \cdots + e_n) \\
+& = 1 + a_1 \det( e_1, e_2, \ldots, e_n) + \cdots + a_n \det( e_1, \ldots, e_{n-1}, e_n) \\
+& = 1 + a_1 + \cdots + a_n
+\end{align*}
+这题也可以利用加边的方式进行求解。
+
+\newpageorvspace
+
+{\bf 第二题}. 求下列线性方程组的一个特解$\gamma_0$以及导出组的一个基础解系，并用它们表出线
+性方程组的全部解。
+$$
+\begin{cases}
+x_1 - x_2 - 3 x_3 + x_4 + 3 x_5 = 1 \\
+x_1 - x_2 - x_3 + x_4 + x_5 = 1 \\
+x_1 + x_2 + x_3 - x_4 - x_5 = 1
+\end{cases}
+$$
+
+\newpageorvspace
+
+{\bf 解}： 化为增广矩阵的形式进行化简
+\begin{align*}
+\left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 1 & -1 & -1 & 1 & 1 & 1 \\ 1 & 1 & 1 & -1 & -1 & 1 \end{array} \right) & \rightarrow \left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 0 & 0 & 2 & 0 & -2 & 0 \\ 0 & 2 & 4 & -2 & -4 & 0 \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c} 1 & -1 & 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 2 & 0 & -2 & 0 & 0 \end{array} \right) \\
+& \rightarrow \left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 1 & 0 & -1 & 0 & 0 \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 1 & 0 & -1 & 0 & 0 \\ 0 & 0 & 1 & 0 & -1 & 0 \end{array} \right)
+\end{align*}
+解得通解为
+$$\begin{pmatrix} 1 \\ 0 \\ 0 \\ 0 \\ 0 \end{pmatrix} + \tau_1 \begin{pmatrix} 0 \\ 1 \\ 0 \\ 1 \\ 0 \end{pmatrix} + \tau_2 \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ 1 \end{pmatrix}, \quad \tau_1, \tau_2 \in \mathbb{R}.$$
+
+\newpageorvspace
+
+{\bf 第三题}. 设$\mathbb{F}$上$n$维线性空间$V$的一组基为$\alpha_1, \alpha_2, \ldots, \alpha_n,$ 令
+$$\beta_k = \alpha_1 + \alpha_2 + \cdots + \alpha_k, \quad k = 1, 2, \ldots, n.$$
+\begin{itemize}
+\item[(1)] 证明$\beta_1, \beta_2, \ldots, \beta_n$是$V$的一组基；
+\item[(2)] 对于$\alpha = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n,$ 求出$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标。
+\end{itemize}
+
+\newpageorvspace
+
+{\bf 解}： (1) 我们有
+$$(\beta_1, \beta_2, \ldots, \beta_n) = (\alpha_1, \alpha_2, \ldots, \alpha_n) \underbrace{ \begin{pmatrix} 1 & 1 & 1 & \cdots & 1 \\ 0 & 1 & 1 & \cdots & 1 \\ 0 & 0 & 1 & \cdots & 1 \\ \vdots & \vdots & \ddots & \ddots & \vdots \\ 0 & 0 & \cdots & 0 & 1 \end{pmatrix} }_{\text{记作} A}$$
+到这里我们可以直接说由于$A$是一个可逆（满秩）方阵，所以$\beta_1, \beta_2, \ldots, \beta_n.$ 如果还不清楚的话，我们就假设$\beta_1, \beta_2, \ldots, \beta_n$线性相关，即存在不全为0的数$\lambda_1, \ldots, \lambda_n,$ 使得$\lambda_1 \beta_1 + \cdots + \lambda_n \beta_n = 0,$ 即有
+$$0 = (\beta_1, \beta_2, \ldots, \beta_n) \underbrace{ \begin{pmatrix} \lambda_1 \\ \vdots \\ \lambda_n \end{pmatrix} }_{\text{记作} \lambda} = (\alpha_1, \alpha_2, \ldots, \alpha_n) A \lambda.$$
+由于$\alpha_1, \alpha_2, \ldots, \alpha_n$是基，线性无关，所以要使上式成立，必须有$A\lambda = 0.$ 但是方阵$A$满秩，所以$A\lambda = 0$只能有零解，矛盾。
+
+(2) 沿用上一小题记号，我们有
+$$\alpha = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n = (\alpha_1, \alpha_2, \ldots, \alpha_n) \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix} = (\beta_1, \beta_2, \ldots, \beta_n) A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}.$$
+$A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$即为$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标。可以直接求$A^{-1}$，也可以解线性方程组$A \lambda = \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}.$
+$$\left( \begin{array}{ccccc|c}1 & 1 & 1 & \cdots & 1 & 1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c}1 & 0 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \cdots \rightarrow \left( \begin{array}{ccccc|c}1 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 0 & 1 & \cdots & 0 & -1 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right)$$
+解得$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (-1, \ldots, -1, n)^T.$
+
+\newpageorvspace
+
+{\bf 第四题}. 判断下述结论是否正确，并说明理由。
+\begin{itemize}
+\item[(1)] 设向量组$I = \{ \alpha_1, \alpha_2, \ldots, \alpha_m \}$的秩为$r.$ 若去掉$I$中任意一个向量$\alpha_i (1 \leqslant i \leqslant m)$都有向量组$I \setminus \{ \alpha_i \}$的秩为$r-1,$ 则有$r = m$;
+\item[(2)] 若$W$是$V$的子空间，且$\alpha_1 + W, \ldots, \alpha_r + W$是商空间$V / W$的一组基，则$\alpha_1, \ldots, \alpha_r$在$V$中是线性无关的。
+\end{itemize}
+
+\newpageorvspace
+
+{\bf 解}： (1) 正确。用反证法，假设$r < m,$ 那么取向量组$I$的一个极大线性无关组$I' = \{ \alpha_{i_1}, \alpha_{i_2}, \ldots, \alpha_{i_r} \},$ 那么取$I$中不属于$I'$的任意一个向量$\alpha$, 都有$I \setminus \{ \alpha \}$包含$I',$ 从而秩为$r,$ 矛盾。
+
+(2) 正确。用反证法，假设$\alpha_1, \ldots, \alpha_r$在$V$中线性相关，那么存在不全为0的数$\lambda_1, \ldots, \lambda_r,$ 使得$\lambda_1 \alpha_1 + \cdots + \lambda_r \alpha_r = 0 \in W.$ 那么
+$$\lambda_1 (\alpha_1 + W) + \cdots + \lambda_r (\alpha_r + W) = 0 + W.$$
+从这里我们可以看到，$\alpha_1, \ldots, \alpha_r$的选取需要比它们线性无关更强的条件，即要求
+$$\operatorname{span}\{ \alpha_1, \ldots, \alpha_r \} \cap W = \{0\}.$$
+
+\newpageorvspace
+
+{\bf 第五题}. 设$V = \mathbb{F}^n, n \geqslant 2,$ 定义$\mathbb{F}^n$的子集$W_1, W_2$如下：
+\begin{gather*}
+W_1 = \{ (x_1, \ldots, x_n) \in \mathbb{F}^n \ |\ x_1 + \cdots + x_n = 0 \}, \\
+W_2 = \{ (y_1, \ldots, y_n) \in \mathbb{F}^n \ |\ y_1 - \cdots - y_n = 0 \}. \\
+\end{gather*}
+\begin{itemize}
+\item[(1)] 证明$W_1, W_2$都是$V$的子空间，并且$V = W_1 + W_2$.
+\item[(2)] 求$\dim (W_1 \cap W_2)$和$W_1 \cap W_2$的一组基。
+\end{itemize}
+
+\newpageorvspace
+
+{\bf 解}： 这题可以根据定义去验证，也可以通过$W_1, W_2$是两个线性方程（组）的解空间来说明他们是$V$的子空间。关于维数关系，我们有
+$$\dim (W_1 + W_2) = \dim(W_1) + \dim(W_2) - \dim(W_1 \cap W_2) = (n - 1) + (n - 1) - \dim(W_1 \cap W_2).$$
+$W_1 \cap W_2$是线性方程组
+$$
+\begin{cases}
+x_1 + \cdots + x_n = 0 \\
+x_1 - \cdots - x_n = 0
+\end{cases}
+$$
+的解空间，维数至多为$n-2,$ 从而有$\dim (W_1 + W_2) = 2n - 2 - \dim(W_1 \cap W_2) \geqslant 2n - 2 - (n - 2) = n$. 所以必须有$\dim (W_1 + W_2) = n,$ 即$V = W_1 + W_2$. 进一步解上述线性方程组有解
+$$x = \begin{pmatrix} 0 \\ \tau_1 \\ \vdots \\ \tau_{n-2} \\ -(\tau_1 + \cdots + \tau_{n-2}) \end{pmatrix}.$$
+即知$\dim (W_1 + W_2) = n - 2,$ 一组基可以取为
+$$\left\{ \begin{pmatrix} 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \cdots, \begin{pmatrix} 0 \\ \vdots \\ 0 \\ 1 \\ -1 \end{pmatrix} \right\}.$$
+
+\newpageorvspace
+
+{\bf 第六题}. 设$\alpha_1, \alpha_2, \ldots, \alpha_r$和$\beta_1, \beta_2, \ldots, \beta_r$分别是$n$维线性空间$V_1$和$V_2$的两组线性无关的向量组，
+\begin{itemize}
+\item[(1)] 构造一个$V_1$到$V_2$的同态映射$f$满足
+$$f(\alpha_i) = \beta_i, i = 1, \ldots, r, \text{ 并且 } \dim(\ker(f)) = n-r,$$
+\item[(2)] 满足上述条件的同态映射是否唯一？并证明你的结论。
+\end{itemize}
+
+\newpageorvspace
+
+{\bf 解}： (1) 将线性空间$V_1$的线性无关组$\alpha_1, \alpha_2, \ldots, \alpha_r$扩充为一组基$\alpha_1, \alpha_2, \ldots, \alpha_r, \alpha_{r+1}, \cdots, \alpha_n.$ 定义$f: V_1 \rightarrow V_2$（在$V_1$的基$\alpha_1, \ldots, \alpha_n$上作用）为
+$$
+f(\alpha_i) = \begin{cases}
+\beta_i, & i = 1, \ldots, r, \\
+0, & i = r+1, \ldots, n.
+\end{cases}
+$$
+由于$\beta_1, \beta_2, \ldots, \beta_r$线性无关，所以$\ker(f) = \operatorname{span}\{ \alpha_{r+1}, \cdots, \alpha_n \},$ 即有$\dim(\ker(f)) = n-r.$
+
+(2) 不唯一。事实上，只要我们让$f(\alpha_i) \in \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \}, i = r+1, \ldots, n,$ 即可。例如
+$$
+f(\alpha_i) = \begin{cases}
+\beta_i, & i = 1, \ldots, r, \\
+\beta_1, & i = r+1, \ldots, n.
+\end{cases}
+$$
+此时，$\operatorname{Im}(f) = \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \},$ 即有$\dim(\operatorname{Im}(f)) = r,$ 那么根据维数公式有
+$$\dim(\ker(f)) = \dim V_1 - \dim(\operatorname{Im}(f)) = n - r.$$
+同时，根据维数公式可知，条件$f(\alpha_i) \in \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \}, i = r+1, \ldots, n,$是满足题设条件的同态映射$f$必须要满足的条件。
 
 \end{document}
