--- a/content/class-4.tex
+++ b/content/class-4.tex
@@ -52,8 +52,17 @@ $$
 
 {\bf 解}： 化为增广矩阵的形式进行化简
 \begin{align*}
-\left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 1 & -1 & -1 & 1 & 1 & 1 \\ 1 & 1 & 1 & -1 & -1 & 1 \end{array} \right) & \rightarrow \left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 0 & 0 & 2 & 0 & -2 & 0 \\ 0 & 2 & 4 & -2 & -4 & 0 \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c} 1 & -1 & 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 2 & 0 & -2 & 0 & 0 \end{array} \right) \\
-& \rightarrow \left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 1 & 0 & -1 & 0 & 0 \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 1 & 0 & -1 & 0 & 0 \\ 0 & 0 & 1 & 0 & -1 & 0 \end{array} \right)
+\arraycolsep=4pt
+\left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 1 & -1 & -1 & 1 & 1 & 1 \\ 1 & 1 & 1 & -1 & -1 & 1 \end{array} \right) & \rightarrow
+\arraycolsep=4pt
+\left( \begin{array}{ccccc|c} 1 & -1 & -3 & 1 & 3 & 1 \\ 0 & 0 & 2 & 0 & -2 & 0 \\ 0 & 2 & 4 & -2 & -4 & 0 \end{array} \right) \rightarrow
+\arraycolsep=4pt
+\left( \begin{array}{ccccc|c} 1 & -1 & 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 2 & 0 & -2 & 0 & 0 \end{array} \right) \\
+& \rightarrow
+\arraycolsep=4pt
+\left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 0 & 1 & 0 & -1 & 0 \\ 0 & 1 & 0 & -1 & 0 & 0 \end{array} \right) \rightarrow
+\arraycolsep=4pt
+\left( \begin{array}{ccccc|c} 1 & 0 & 0 & 0 & 0 & 1 \\ 0 & 1 & 0 & -1 & 0 & 0 \\ 0 & 0 & 1 & 0 & -1 & 0 \end{array} \right)
 \end{align*}
 解得通解为
 $$\begin{pmatrix} 1 \\ 0 \\ 0 \\ 0 \\ 0 \end{pmatrix} + \tau_1 \begin{pmatrix} 0 \\ 1 \\ 0 \\ 1 \\ 0 \end{pmatrix} + \tau_2 \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ 1 \end{pmatrix}, \quad \tau_1, \tau_2 \in \mathbb{R}.$$
@@ -77,7 +86,7 @@ $$0 = (\beta_1, \beta_2, \ldots, \beta_n) \underbrace{ \begin{pmatrix} \lambda_1
 
 (2) 沿用上一小题记号，我们有
 $$\alpha = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n = (\alpha_1, \alpha_2, \ldots, \alpha_n) \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix} = (\beta_1, \beta_2, \ldots, \beta_n) A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}.$$
-$A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$即为$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标。可以直接求$A^{-1}$，也可以解线性方程组$A \lambda = \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}.$
+$A^{-1} \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$即为$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标。可以直接求$A^{-1}$，但一般不这么做，因为计算代价较大。也可以通过解线性方程组$A \lambda = \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$来求解：
 $$\left( \begin{array}{ccccc|c}1 & 1 & 1 & \cdots & 1 & 1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c}1 & 0 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \cdots \rightarrow \left( \begin{array}{ccccc|c}1 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 0 & 1 & \cdots & 0 & -1 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right)$$
 解得$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (-1, \ldots, -1, n)^T.$
 
@@ -112,7 +121,7 @@ W_2 = \{ (y_1, \ldots, y_n) \in \mathbb{F}^n \ |\ y_1 - \cdots - y_n = 0 \}. \\
 
 \newpageorvspace
 
-{\bf 解}： 这题可以根据定义去验证，也可以通过$W_1, W_2$是两个线性方程（组）的解空间来说明他们是$V$的子空间。关于维数关系，我们有
+{\bf 解}： (1) 这题可以根据定义去验证，也可以通过$W_1, W_2$是两个线性方程（组）的解空间来说明他们是$V$的子空间。关于维数关系，我们有
 $$\dim (W_1 + W_2) = \dim(W_1) + \dim(W_2) - \dim(W_1 \cap W_2) = (n - 1) + (n - 1) - \dim(W_1 \cap W_2).$$
 $W_1 \cap W_2$是线性方程组
 $$
@@ -121,7 +130,11 @@ x_1 + \cdots + x_n = 0 \\
 x_1 - \cdots - x_n = 0
 \end{cases}
 $$
-的解空间，维数至多为$n-2,$ 从而有$\dim (W_1 + W_2) = 2n - 2 - \dim(W_1 \cap W_2) \geqslant 2n - 2 - (n - 2) = n$. 所以必须有$\dim (W_1 + W_2) = n,$ 即$V = W_1 + W_2$. 进一步解上述线性方程组有解
+的解空间，维数至多为$n-2,$ 从而有$\dim (W_1 + W_2) = 2n - 2 - \dim(W_1 \cap W_2) \geqslant 2n - 2 - (n - 2) = n$. 所以必须有$\dim (W_1 + W_2) = n,$ 即$V = W_1 + W_2$.
+
+另一种方法是，可以很容易写出$W_1$的一组基$(1, -1, 0, \ldots, 0)^T,$ $(1, 0, -1, 0, \ldots, 0)^T,$ $\ldots,$ $(1, 0, \ldots, 0, -1)^T,$ 以及$W_2$的一组基$(1, 1, 0, \ldots, 0)^T,$ $(1, 0, 1, 0, \ldots, 0)^T,$ $\ldots,$ $(1, 0, \ldots, 0, 1)^T.$ 把这两组基合并在一起组成$W_1 + W_2$中的一个向量组，容易看出这个向量组的秩为$n,$ 从而知$V = W_1 + W_2.$
+
+(2) 进一步解上述线性方程组有解
 $$x = \begin{pmatrix} 0 \\ \tau_1 \\ \vdots \\ \tau_{n-2} \\ -(\tau_1 + \cdots + \tau_{n-2}) \end{pmatrix}.$$
 即知$\dim (W_1 + W_2) = n - 2,$ 一组基可以取为
 $$\left\{ \begin{pmatrix} 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \cdots, \begin{pmatrix} 0 \\ \vdots \\ 0 \\ 1 \\ -1 \end{pmatrix} \right\}.$$
