--- a/content/class-4.tex
+++ b/content/class-4.tex
@@ -93,7 +93,7 @@ $$(\beta_1, \beta_2, \ldots, \beta_n) = (\alpha_1, \alpha_2, \ldots, \alpha_n) \
 $$0 = (\beta_1, \beta_2, \ldots, \beta_n) \underbrace{ \begin{pmatrix} \lambda_1 \\ \vdots \\ \lambda_n \end{pmatrix} }_{\text{记作} \lambda} = (\alpha_1, \alpha_2, \ldots, \alpha_n) A \lambda.$$
 由于$\alpha_1, \alpha_2, \ldots, \alpha_n$是基，线性无关，所以要使上式成立，必须有$A\lambda = 0.$ 但是方阵$A$满秩，所以$A\lambda = 0$只能有零解，矛盾。
 
-另一种解法：容易看出有$\alpha_1 = \beta_1, \alpha_k = \beta_k - \beta_{k-1}, k = 1, \ldots, n.$ 即$\alpha_1, \ldots, \alpha_n$能由$\beta_1, \ldots, \beta_n$线性表出。故$\beta_1, \ldots, \beta_n$的秩大于等于$\alpha_1, \ldots, \alpha_n$的秩。由于$\alpha_1, \ldots, \alpha_n$是基，故秩只能相等，从而知$\beta_1, \ldots, \beta_n$也是一组基。这种解法相当于把矩阵$A$的逆求出来了。
+另一种解法：容易看出有$\alpha_1 = \beta_1, \alpha_k = \beta_k - \beta_{k-1}, k = 2, \ldots, n.$ 即$\alpha_1, \ldots, \alpha_n$能由$\beta_1, \ldots, \beta_n$线性表出。故$\beta_1, \ldots, \beta_n$的秩大于等于$\alpha_1, \ldots, \alpha_n$的秩。由于$\alpha_1, \ldots, \alpha_n$是基，故秩只能相等，从而知$\beta_1, \ldots, \beta_n$也是一组基。这种解法相当于把矩阵$A$的逆求出来了。
 
 (2) 沿用上一小题记号，我们设$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (\lambda_1, \ldots, \lambda_n)^T,$ 那么
 \begin{align*}
@@ -103,6 +103,8 @@ $$0 = (\beta_1, \beta_2, \ldots, \beta_n) \underbrace{ \begin{pmatrix} \lambda_1
 解线性方程组$A \lambda = \begin{pmatrix} 1 \\ 2 \\ \vdots \\ n \end{pmatrix}$：
 $$\left( \begin{array}{ccccc|c}1 & 1 & 1 & \cdots & 1 & 1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \left( \begin{array}{ccccc|c}1 & 0 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 1 & \cdots & 1 & 2 \\ 0 & 0 & 1 & \cdots & 1 & 3 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right) \rightarrow \cdots \rightarrow \left( \begin{array}{ccccc|c}1 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 1 & 0 & \cdots & 0 & -1 \\ 0 & 0 & 1 & \cdots & 0 & -1 \\ \vdots & \vdots & \ddots & \ddots & \vdots & \vdots \\ 0 & 0 & \cdots & 0 & 1 & n \end{array} \right)$$
 解得$\alpha$在基$\beta_1, \beta_2, \ldots, \beta_n$下的坐标为$\lambda = (-1, \ldots, -1, n)^T.$
+
+或者我们利用$\alpha_1 = \beta_1, \alpha_k = \beta_k - \beta_{k-1}, k = 2, \ldots, n,$ 代入$\alpha = \alpha_1 + 2 \alpha_2 + \cdots + n \alpha_n$也可以得到相同的结论。
 
 \fi  % fi of \ifIncludeAnswer
 
@@ -161,7 +163,7 @@ $$
 另一种方法是，可以很容易写出$W_1$的一组基$(1, -1, 0, \ldots, 0)^T,$ $(1, 0, -1, 0, \ldots, 0)^T,$ $\ldots,$ $(1, 0, \ldots, 0, -1)^T,$ 以及$W_2$的一组基$(1, 1, 0, \ldots, 0)^T,$ $(1, 0, 1, 0, \ldots, 0)^T,$ $\ldots,$ $(1, 0, \ldots, 0, 1)^T.$ 把这两组基合并在一起组成$W_1 + W_2$中的一个向量组，容易看出这个向量组的秩为$n,$ 从而知$V = W_1 + W_2.$
 
 (2) 进一步解上述线性方程组有解
-$$x = \begin{pmatrix} 0 \\ \tau_1 \\ \vdots \\ \tau_{n-2} \\ -(\tau_1 + \cdots + \tau_{n-2}) \end{pmatrix}.$$
+$$x = \begin{pmatrix} 0 \\ \tau_1 \\ \vdots \\ \tau_{n-2} \\ -(\tau_1 + \cdots + \tau_{n-2}) \end{pmatrix}, ~~ \tau_1, \ldots, \tau_{n-2} \in \mathbb{R}.$$
 即知$\dim (W_1 + W_2) = n - 2,$ 一组基可以取为
 $$\left\{ \begin{pmatrix} 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \begin{pmatrix} 0 \\ 0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ -1 \end{pmatrix}, \cdots, \begin{pmatrix} 0 \\ \vdots \\ 0 \\ 1 \\ -1 \end{pmatrix} \right\}.$$
 
@@ -199,7 +201,7 @@ $$
 此时，$\operatorname{Im}(f) = \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \},$ 即有$\dim(\operatorname{Im}(f)) = r,$ 那么根据维数公式有
 $$\dim(\ker(f)) = \dim V_1 - \dim(\operatorname{Im}(f)) = n - r.$$
 或者，你也可以通过$f$的定义算得
-$$\ker f = \{ \alpha_1 - \alpha_i \ |\ i = r + 1, \ldots, n \},$$
+$$\ker f = \operatorname{span} \{ \alpha_1 - \alpha_i \ |\ i = r + 1, \ldots, n \},$$
 再得到上述空间的维数为$n - r.$
 
 同时，根据维数公式可知，条件$f(\alpha_i) \in \operatorname{span} \{ \beta_1, \beta_2, \ldots, \beta_r \}, i = r+1, \ldots, n,$是满足题设条件的同态映射$f$必须要满足的条件。
